--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: Rocket Boosts your site development
 
 <div class="row mt-5">
   <div class="col-6">
-      <h1 class="mb-3">Introducing Rocket CMS</h1>
+      <h1 class="mb-3">Introducing Houston CMS</h1>
       <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum suscipit dolore, doloremque iste, temporibus nobis obcaecati itaque nesciunt error laboriosam pariatur numquam necessitatibus ipsam ipsum quo harum saepe nostrum! Laborum.</p>
       <p class="mb-4">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ipsum facere. Fugiat excepturi quisquam autem illum nihil sunt nam veniam possimus. Non iure nisi explicabo sint ducimus voluptate quas expedita!
