--- a/index.html
+++ b/index.html
@@ -129,9 +129,26 @@ description: Rocket Boosts your site development
 <hr class="mt-5">
 
 <div class="row mt-5">
-  <div class="col-6">
+  <div class="col-6 content">
     <h2>LaunchPad</h2>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quidem ex dolorem reiciendis ut? Esse sunt architecto provident dolor ad id ut sed mollitia, amet consequatur, excepturi modi officia maiores.
+    The best way to launch your app with Houston is using LaunchPad.  LaunchPad is a rails template that pre configures Houston Admin along with all the standard "boring rails"<sup>TM</sup> Gems and configurations to get you up and running right away.
+    <ul>
+      <li>Site and Application Layouts</li>
+      <li>Bootstrap Integration (yes you can change it to Tailwind)</li>
+      <li>Devise - styled views with advanced features</li>
+      <li>Pagination with Pagy</li>
+      <li>Breadcrumbs</li>
+      <li>Markdown Rendering</li>
+      <li>SEO:  Meta tags</li>
+      <li>SEO:  friendly urls</li>
+      <li>SEO: breadcrumbs</li>
+      <li>.env configuration management</li>
+      <li>ActiveStorage and ActionText setup</li>
+      <li>Letter opener dev tools</li>
+      <li>And more!</li>
+    </ul>
+
+    <a href="/docs/getting-started" class="btn btn-cta shadow">Get Stated with LaunchPad</a>
   </div>
   <div class="col-6">
     <img src="/assets/images/spaceship-background-design.png" class="w-100">
