--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: Rocket Boosts your site development
 
 <div class="intro mt-5">
   
-  <img src="/assets/images/boats.webp" class="shadow shadow-lg bordered">
+  <img src="/assets/images/home/models.webp" class="shadow shadow-lg bordered">
 </div>
 
 
@@ -27,7 +27,7 @@ description: Rocket Boosts your site development
 <div class="row">
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="/assets/images/home/models.webp" class="w-100">
       <div class="card-header">
         <h3>Model Management</h3>
       </div>
@@ -40,9 +40,9 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="/assets/images/home/snippets.webp" class="w-100">
       <div class="card-header">
-        <h3>Snippet Management</h3>
+        <h3>Snippets</h3>
       </div>
       <div class="card-body">
         A simple way to manage all the little bits of text around your site. 
@@ -52,9 +52,9 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="/assets/images/home/user.webp" class="w-100">
       <div class="card-header">
-        <h3>User Management</h3>
+        <h3>User Administration</h3>
       </div>
       <div class="card-body">
         Manage your users and team accounts from within Houston. Houston includes advanced features to help you support your users.
@@ -64,9 +64,9 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="/assets/images/home/menus.webp" class="w-100">
       <div class="card-header">
-        <h3>Menu Management</h3>
+        <h3>Advanced Menu Management</h3>
       </div>
       <div class="card-body">
         Install Houston::MenuManagement to enable elegant, intuitive management of all your site menus. 
@@ -77,20 +77,19 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="/assets/images/home/media-picker.webp" class="w-100">
       <div class="card-header">
         <h3>Media Library</h3>
       </div>
       <div class="card-body">
         Enable the Media Library feature to provide a feature rich media management area and file picker
-      </div>
-      
+      </div>      
     </div>
   </div>
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="/assets/images/home/snippets.webp" class="w-100">
       <div class="card-header">
         <h3>RichText Areas</h3>
       </div>
@@ -102,7 +101,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="/assets/images/home/blocks.webp" class="w-100">
       <div class="card-header">
         <h3>Block Based Pages</h3>
       </div>
@@ -148,7 +147,7 @@ description: Rocket Boosts your site development
       <li>And more!</li>
     </ul>
 
-    <a href="/docs/getting-started" class="btn btn-cta shadow">Get Stated with LaunchPad</a>
+    <a href="/docs/getting-started" class="btn btn-cta shadow">{ Get Stated with LaunchPad } </a>
   </div>
   <div class="col-6">
     <img src="/assets/images/spaceship-background-design.png" class="w-100">
