--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: Rocket Boosts your site development
 
 <div class="intro mt-5">
   
-  <img src="/assets/images/home/models.webp" class="shadow shadow-lg bordered">
+  <img src="{{site.baseurl}}/assets/images/home/models.webp" class="shadow shadow-lg bordered">
 </div>
 
 
@@ -27,7 +27,7 @@ description: Rocket Boosts your site development
 <div class="row">
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/home/models.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/home/models.webp" class="w-100">
       <div class="card-header">
         <h3>Model Management</h3>
       </div>
@@ -40,7 +40,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/home/snippets.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/home/snippets.webp" class="w-100">
       <div class="card-header">
         <h3>Snippets</h3>
       </div>
@@ -52,7 +52,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/home/user.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/home/user.webp" class="w-100">
       <div class="card-header">
         <h3>User Administration</h3>
       </div>
@@ -64,7 +64,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/home/menus.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/home/menus.webp" class="w-100">
       <div class="card-header">
         <h3>Advanced Menu Management</h3>
       </div>
@@ -77,7 +77,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/home/media-picker.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/home/media-picker.webp" class="w-100">
       <div class="card-header">
         <h3>Media Library</h3>
       </div>
@@ -89,7 +89,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/home/snippets.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/home/snippets.webp" class="w-100">
       <div class="card-header">
         <h3>RichText Areas</h3>
       </div>
@@ -101,7 +101,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/home/blocks.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/home/blocks.webp" class="w-100">
       <div class="card-header">
         <h3>Block Based Pages</h3>
       </div>
@@ -113,7 +113,7 @@ description: Rocket Boosts your site development
 
   <div class="col-6 mt-4">
     <div class="card shadow">
-      <img src="/assets/images/boats.webp" class="w-100">
+      <img src="{{site.baseurl}}/assets/images/boats.webp" class="w-100">
       <div class="card-header">
         <h3>Useful Field Types</h3>
       </div>
@@ -150,6 +150,6 @@ description: Rocket Boosts your site development
     <a href="/docs/getting-started" class="btn btn-cta shadow">{ Get Stated with LaunchPad } </a>
   </div>
   <div class="col-6">
-    <img src="/assets/images/spaceship-background-design.png" class="w-100">
+    <img src="{{site.baseurl}}/assets/images/spaceship-background-design.png" class="w-100">
   </div>
 </div>
